examples/test/testpolicy9949.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9949
  namespace: namespace359
spec:
  podSelector:
    matchLabels:
      key47: value40
      key40: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value46
      podSelector:
        matchLabels:
          key46: value0
          key6: value43
          key43: value11
